# Android-Service-Runner-App

./: .gitignore  README.md  README_OPENCV.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/org/example/androidservicerunnerapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/licensespring/arm64-v8a/: README.txt
app/src/main/cpp/opencv/arm64-v8a/: README.txt
app/src/main/java/com/licensespring/android/: LicenseSpring.java
app/src/main/java/org/example/androidservicerunnerapp/: MainActivity.java
app/src/main/java/org/qtproject/qtservice/: QtServiceWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/example/androidservicerunnerapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv_static/: CMakeDownloadLog.txt
opencv_static/modules/core/: arithm.vsx3.cpp  convert.vsx3.cpp
opencv_static/modules/core/test/: test_intrin128.simd_declarations.hpp  test_intrin128.sse3.cpp  test_intrin256.avx2.cpp  test_intrin256.simd_declarations.hpp  test_intrin512.avx512_skx.cpp  test_intrin512.simd_declarations.hpp
opencv_static/modules/dnn/int8layers/: layers_common.avx512_skx.cpp  layers_common.simd_declarations.hpp
opencv_static/modules/dnn/layers/: layers_common.avx.cpp  layers_common.simd_declarations.hpp
opencv_static/modules/dnn/layers/cpu_kernels/: conv_block.avx2.cpp  conv_block.simd_declarations.hpp  conv_depthwise.lasx.cpp  conv_depthwise.simd_declarations.hpp  conv_winograd_f63.avx.cpp  conv_winograd_f63.simd_declarations.hpp
opencv_static/modules/gapi/backends/fluid/: gfluidcore_func.avx2.cpp  gfluidcore_func.simd_declarations.hpp  gfluidimgproc_func.simd_declarations.hpp  gfluidimgproc_func.sse4_1.cpp
opencv_static/modules/java_bindings_generator/: gen_java.json
opencv_static/modules/js_bindings_generator/: headers.txt
opencv_static/modules/objc_bindings_generator/: gen_objc.json
opencv_static/opencv2/: cvconfig.h
